<resources>
    <string name="app_name">kotlin_android_week8</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_wbham">우빈</string>
    <string name="menu_jaeeepp">민재</string>
    <string name="menu_maddy">정연</string>
    <string name="menu_arr">가영</string>
    <string name="menu_rdh">동현</string>
    <string name="hello_wbham">우빈 안녕</string>
    <string name="hello_jaeeepp">민재 안녕</string>
    <string name="hello_maddy">정연 안녕</string>
    <string name="hello_arr">가영 안녕</string>
    <string name="hello_rdh">동현 안녕</string>
</resources>